<resources>
    <string name="app_name">Asgm_Mobile</string>
    <string name="pick_fontSize">Choose Your Font Size.</string>
    <string name="content">Sarah, the person who created this application, is incredibly concerned about the environment and wants to make a difference in the world. Given that the issue of climate change has historically generated considerable debate. To raise awareness and instruct everyone on how to improve our planet, she and her team created this application.</string>
    <string name="contentPP">Privacy Policy for Eco Earth Mobile Application

Effective Date: 1.1.2023

- Introduction

    Eco Earth Mobile Application ("App") is committed to protecting the privacy of its users. This Privacy Policy describes how we collect, use, and disclose personal information that we receive through the App. This Privacy Policy applies only to information collected through the App and not to information collected offline or through other websites or services.

- Collection of Information

We may collect the following types of personal information:
- Personal information you provide to us, such as your name, email address, and other contact information when you register for an account or contact us through the App.
- Information automatically collected when you use the App, such as your IP address, device type, and mobile operating system.
- Location information if you enable the App\'s location services.
- Usage information about how you interact with the App, such as the pages you visit and the features you use.
- Use of Information
We may use the personal information we collect for the following purposes:
- To provide and improve the App\'s functionality and features.
- To respond to your inquiries and requests.
- To communicate with you about the App and other products and services that may be of interest to you.
- To personalize your experience on the App.
- To comply with applicable laws and regulations.

- Sharing of Information

    We may share your personal information with third-party service providers who perform services on our behalf, such as hosting, data analysis, and customer service. We may also share your personal information with other third parties if required by law or to protect our legal rights or interests.

- Security

    We take reasonable measures to protect the personal information we collect from unauthorized access, use, and disclosure. However, no security measure can guarantee complete security. Therefore, we cannot guarantee the security of your personal information.

- Children\'s Privacy

    The App is not intended for use by children under the age of 13. We do not knowingly collect personal information from children under the age of 13. If we learn that we have collected personal information from a child under the age of 13, we will delete the information as soon as possible.

- Changes to this Privacy Policy

    We may update this Privacy Policy from time to time. If we make material changes to this Privacy Policy, we will notify you by email or by posting a notice on the App.

- Contact Us

    If you have any questions about this Privacy Policy or our privacy practices, please contact us at ecoEarth@gmail.com.</string>
    <string name="contentCUAddress">A-88-4, ABC Tower, Jalan EFG, 45009 Kuala Lumpur, Malaysia</string>
    <string name="contentCUpn">+6011-23456789</string>
    <string name="contentCUea">ecoEarth@gmail.com</string>
    <string name="feedbackTxt">Thanks for letting us know your feedback after using our application. We will listen to your advice and make changes to this application.</string>
    <string name="feedbackTxt2">Click this Button to give us your feedback.</string>
    <string name="eduContent">In this section, You will learn about climate changes. This is the top 10 video that all of the people have voted. Hope you can enjoy this 10 videos. And of course you can go to YouTube to learn more details about climate changes.</string>
    <string name="comContent">In this section, All of the event below is going on in the future. If you got a event to conduct, fell free to add it into here. Hope everyone enjoy this section and help to save the earth together.</string>
</resources>